--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -4,7 +4,8 @@
 // Body Styles 
 body,
 html, 
-.body {
+.body,
+.spacer {
   background: #343b43 !important;
 }
 
